# localised-branch-reasoning

./: .gitignore  README.md  pyproject.toml
branch-disagreement/: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  README.md
branch-disagreement/prototype/: README.md  pyproject.toml  requirements-gpu.txt
branch-disagreement/prototype/scripts/: run_experiment.py  smoke_test.py
branch-disagreement/prototype/src/branch_disagreement/: __init__.py  clustering.py  config.py  datasets.py  metrics.py  model_runner.py  normalize.py  pipeline.py  report.py  scoring.py
branch-disagreement/prototype/tests/: test_metrics.py  test_normalize.py  test_pipeline_proxy.py  test_scoring.py
cpp/: llama_branch_worker.cpp  llama_seq_fork_demo.cpp
data/: README.md
docs/: cuda_lora_training.md  llm_branching_infographic.html  multi_branch_evaluation.md  protocol.md
scripts/: build_branching_sft_dataset.py  build_llama_branch_worker.sh  build_llama_seq_fork_demo.sh  combine_comparative_chunks.py  evaluate_branch_markers.py  kv_fork_demo.py  planned_branch_kv_demo.py  prepare_benchmark_dataset.py  probe_marker_bias.py  real_kv_fork_demo.py  real_llm_branch_demo.py  run_all_checks.py  run_coding_branch_eval.py  run_comparative_eval.py  run_long_decision_eval.py  run_model_preset_matrix.py  run_qa_scenarios.py  run_swebench_branch_eval.py  train_branching_lora.py
tests/: test_benchmark_datasets.py  test_branch_cache.py  test_branch_evaluation.py  test_branch_training.py  test_coding_branch_eval.py  test_comparative_eval.py  test_hf_kv_branching.py  test_live_llama_worker.py  (+7 more)
(+42 files in other folders)
